--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -12,7 +12,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: 123
-          POSTGRES_DB: jewelglow_test
+          POSTGRES_DB: JewelGlow
         ports:
           - 5432:5432
         options: >-
